# pysteno

./: .envrc  .gitignore  Notebook.org  README.org  flake.nix  pyproject.toml
steno/: __init__.py  extract.py
