[tool.poetry]
name = "pysteno"
version = "0.1.0"
description = "my steno project in python"
authors = []
packages = [{include = "steno"}]

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "4.10.0.84"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^6.1.0"
ipython = "*"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
pytest = "^8.3.2"
python-lsp-server= "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
